<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_up_page">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="1dp">

        <TableRow android:padding="5dip">

            <TextView
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_span="1"
                android:gravity="center_horizontal"
                android:text="@string/SignUpForm"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />


        </TableRow>


        <TableRow />

            <TextView
                android:layout_width="383dp"
                android:layout_height="61dp"
                android:layout_column="0"
                android:layout_marginLeft="10dp"
                android:text="@string/create_userName"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/create_userName"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="10dp"
                android:background="#fff"
                android:hint="@string/create_userName"
                android:padding="5dp"
                android:textColor="#000" />

        </TableRow>

    <TableRow>

        <EditText
            android:id="@+id/create_password"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="#fff"
            android:hint="password"
            android:padding="5dp"
            android:textColor="#000" />


        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/create_password"
            android:textColor="#fff"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="66dp"
            tools:layout_editor_absoluteY="257dp" />
    </TableRow>


</TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>